# BERT-ecommerce-mocking

./: ecommerce-mock-server-summary.md  vibe-code-rule.yaml
ecommerce-mock/: .gitignore  db-schema-summary.md  docker-compose.yml
ecommerce-mock/.ai/: api-structure.md  project-structure.md
ecommerce-mock/applications/api-cart/: API.md  Dockerfile  package.json  tsconfig.json
ecommerce-mock/applications/api-cart/src/: config.js  config.ts  db.js  db.ts  index.js  index.ts  logger.js  logger.ts
ecommerce-mock/applications/api-customer/: API.md  Dockerfile  Program.cs  api-customer.csproj  appsettings.json
ecommerce-mock/applications/api-customer/Controllers/: AuthController.cs  CustomerController.cs  SimController.cs
ecommerce-mock/applications/api-customer/Data/: AppDbContext.cs
ecommerce-mock/applications/api-order/: API.md  Dockerfile  go.mod  main.go
ecommerce-mock/applications/api-payment/: API.md  Dockerfile  Program.cs  api-payment.csproj  appsettings.json
ecommerce-mock/applications/api-product/: API.md  Dockerfile  go.mod  main.go
ecommerce-mock/applications/api-search/: API.md  Cargo.toml  Dockerfile
ecommerce-mock/applications/api-search/src/: config.rs  elastic.rs  handlers.rs  main.rs
ecommerce-mock/call-api/: run-all.py
ecommerce-mock/infra/fluent-bit/: fluent-bit.conf
ecommerce-mock/infra/mongo/: init.js
ecommerce-mock/infra/mysql/: init.sql
ecommerce-mock/infra/postgres/: init.sql
ecommerce-mock/seeds/: api-cart.js  api-customer.sql  api-order.sql  api-payment.sql  api-product.sql  seed.sh
(+35 files in other folders)
