[package]
name = "api-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = "0.7"
tokio         = { version = "1", features = ["full"] }
tower-http    = { version = "0.5", features = ["trace"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
reqwest       = { version = "0.12", default-features = false, features = ["json"] }
uuid          = { version = "1", features = ["v4"] }
